# lancer

./: .gitignore  .lefthook.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  DESIGN.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  TERMS.md  TOOLS.md  biome.json  cliff.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/agents/: a11y-reviewer.md  api-client-domain-expert.md  cross-platform-engineer.md  docs-consistency-reviewer.md  frontend-engineer.md  i18n-engineer.md  importer-format-reviewer.md  performance-reviewer.md  postman-insomnia-competitive-reviewer.md  product-designer.md  qa-test-engineer.md  react-code-reviewer.md  release-engineer.md  rust-backend-engineer.md  security-privacy-reviewer.md  storage-persistence-reviewer.md  tauri-rust-reviewer.md  tech-lead.md  testing-strategy-reviewer.md  ui-design-reviewer.md  ux-flow-reviewer.md
.claude/commands/: feature.md  review-all.md  ship.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/launch/: signing-keys.md  update-manifest-hosting.md
docs/runbooks/: maintenance.md  rollback.md  ship-new-version.md
scripts/: bump-version.ps1  check-bundle-size.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fsutil.rs  lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/collection/: bru.rs  folder.rs  io.rs  lexer.rs  mod.rs  schema.rs
src-tauri/src/commands/: cookies.rs  curl.rs  envs.rs  exporters.rs  fs.rs  grpc.rs  history.rs  http.rs  importers.rs  mock.rs  mod.rs  settings.rs  stream.rs  watcher.rs  workspace.rs
src-tauri/src/env/: bru.rs  io.rs  materialize.rs  mod.rs  schema.rs  secrets.rs  substitute.rs
src-tauri/src/history/: store.rs
src-tauri/src/http/: auth.rs  client.rs  curl.rs  mod.rs  sse.rs  types.rs
src-tauri/src/importers/openapi/: convert.rs  load.rs  mod.rs  walk.rs
src-tauri/src/importers/postman/: auth.rs  convert.rs  env.rs  mod.rs  schema.rs  walk.rs
src-tauri/src/mock/: mod.rs  responses.rs  router.rs  server.rs
src-tauri/src/scripting/: mod.rs
src-tauri/src/tests/: bru_tests.rs  cookies_tests.rs  curl_tests.rs  env_tests.rs  folder_tests.rs  history_tests.rs  http_tests.rs  mock_tests.rs  mod.rs  openapi_tests.rs  postman_tests.rs
src-tauri/src/tests/fixtures/: auth-aws.bru  auth-oauth2.bru  env-dev.bru  petstore-3.0.yaml  postman-sample-collection.json  postman-shorthand-and-nested.json  simple.bru
src/__tests__/: auth-fields.test.tsx  auth-panel.test.tsx  body-convert.test.ts  env-editor-sheet.test.tsx  env-switcher.test.tsx  history-store.test.ts  response-viewer.test.tsx  sidebar.test.tsx  step-verdict.test.ts  telemetry.test.ts  toast-store.test.ts  url-bar.test.tsx  welcome.test.tsx
src/components/: collection-auth-editor.tsx  collection-runner.tsx  collection-settings-sheet.tsx  command-palette.tsx  shortcuts-dialog.tsx  (+3 more)
(+97 files in other folders)
