[package]
name = "lancer"
version = "0.0.1"
edition = "2021"

[lib]
name = "lancer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "stream", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
nom = "7"
walkdir = "2"
base64 = "0.22"
aws-sigv4 = { version = "1", features = ["http1"] }
aws-credential-types = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
keyring = "3"

[dev-dependencies]
tempfile = "3"
axum = "0.7"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
