[package]
name = "lancer"
version = "0.0.4"
edition = "2021"

[lib]
name = "lancer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "stream", "cookies", "multipart"] }
reqwest_cookie_store = "0.9"
cookie_store = "0.22"
url = "2"
time = { version = "0.3", features = ["formatting"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
nom = "7"
walkdir = "2"
base64 = "0.22"
aws-sigv4 = { version = "1", features = ["http1"] }
aws-credential-types = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
keyring = "3"
openapiv3 = "2"
serde_yaml = "0.9"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
notify = "6"
notify-debouncer-mini = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
boa_engine = "0.21"
# gRPC (runtime .proto loading, no protoc / build-time codegen):
#   protox-parse → FileDescriptorSet from .proto text
#   prost-reflect → DescriptorPool + DynamicMessage (JSON ↔ protobuf via serde)
#   prost / prost-types → encode/decode + descriptor types (version-aligned at 0.14)
#   tonic → HTTP/2 transport; dynamic unary via a custom DynamicMessage codec
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
protox-parse = "0.9"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
